# worldweathernews

./: .commitlintrc.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  .golangci.yml  .lycheeignore  .mise.toml  .npmrc  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .sops.yaml  .yamllint  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  STATUS.md  cliff.toml  compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pre-session-checklist.md  step01.md  step02.md  step04.md  step05.md  step06.md  step08.md  step12.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci-backend.yml  ci-cms-auth.yml  ci-frontend.yml  ci-pyworkers.yml  ci-shared.yml  release.yml  security-scan.yml
apps/backend/: .air.toml  .dockerignore  Dockerfile  Makefile  README.md  config.example.yaml  go.mod  go.sum  sqlc.yaml
apps/cms-auth/: Dockerfile  README.md  go.mod
apps/frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.ts
apps/pyworkers/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/pyworkers/pyworkers/: __main__.py  cli.py  config.py  logging.py  metrics.py  version.py
apps/pyworkers/pyworkers/jobs/: dwd.py  eumetsat.py  heartbeat.py  open_meteo.py
apps/pyworkers/pyworkers/observability/: __init__.py  tracing.py
apps/pyworkers/pyworkers/storage/: postgres.py  redis.py
apps/pyworkers/tests/: conftest.py  test_dwd.py  test_eumetsat.py  test_heartbeat.py  test_open_meteo.py
docs/: architecture.md  backlog.md  cms.md  data-sources.md  deployment.md  development.md  media-storage.md  runbook.md  secrets.md
docs/adr/: 0001-openapi-as-source-of-truth.md  0002-go-for-backend.md  0003-monorepo.md  0004-compose-before-k3s.md  0005-sops-for-secrets.md
infra/: README.md
infra/ansible/: .ansible-lint  README.md  ansible.cfg  requirements.yml
infra/caddy/: Caddyfile  Caddyfile.prod
infra/cloudflare-worker-cms-auth/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
infra/compose/: README.md  compose.dev.yml  compose.prod.yml
infra/deploy/: README.md  deploy-caddy.sh  migrate-caddy-bindmount.sh
infra/migrations/: 0001_open_meteo_hello_world.sql  0002_dwd_poi_stations_and_variables.sql
infra/object-storage/: bucket-policy.json  cors.json
infra/terraform/: .gitignore  README.md
scripts/: build-sqlc-schema.py  check-encrypted-secrets.sh  check-generated.sh  deploy.sh  migrate.sh  release.sh
sessions/: README.md  STATUS.md  handoff-wwn.md  präsentation.md  step01.md  step02.md  step03.md  step04.md  step05.md  step06.md  step07.md  step08.md  step09.md  step10.md  step11.md  step11a.md  step12.md  work-done.md
sessions/feature1/: QUICKSTART.md  README.md  STATUS.md  feature-decisions.md  feature-roadmap.md  prompt-iteration-1-1.md  prompt-iteration-1-1b.md  (+1 more)
(+146 files in other folders)
