[project]
name = "wwn-pyworkers"
version = "0.0.1"
description = "Worker services for worldweathernews.com"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "apscheduler>=3.10,<4",
    "click>=8.1",
    # OpenTelemetry — Pin auf einheitliche Minor-Version, weil das Ökosystem
    # zwischen Minors häufig Breaking Changes hat.
    "opentelemetry-api>=1.29,<1.42",
    "opentelemetry-sdk>=1.29,<1.42",
    "opentelemetry-exporter-otlp-proto-grpc~=1.29.0",
    "opentelemetry-instrumentation-asyncpg~=0.50b0",
    "opentelemetry-instrumentation-redis~=0.50b0",
    "opentelemetry-instrumentation-httpx~=0.50b0",
]

[project.scripts]
pyworkers = "pyworkers.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "watchfiles>=0.22",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyworkers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "S", "C4"]
ignore = ["S101"]  # assert ok in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]  # security checks pragmatisch in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# Bibliotheken ohne py.typed-Marker (asyncpg, apscheduler) — wir akzeptieren
# Untyped-Imports und vertrauen den Runtime-Verträgen.
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "apscheduler.*",
]
ignore_missing_imports = true

# OTel: opentelemetry-instrumentation-*-Pakete tragen kein py.typed.
[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true

# Im Tracing-Modul rufen wir untyped Instrumentor-Constructors auf
# (AsyncPGInstrumentor, RedisInstrumentor, HTTPXClientInstrumentor) —
# disallow_untyped_calls auf dem aufrufenden Modul lockern, nicht global.
[[tool.mypy.overrides]]
module = ["pyworkers.observability.tracing"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=pyworkers --cov-report=term-missing"
